--- a/packages/udisks/unit/udisks.service
+++ b/packages/udisks/unit/udisks.service
@@ -4,4 +4,5 @@ Description=Storage Daemon
 [Service]
 Type=dbus
 BusName=org.freedesktop.UDisks
+ExecStartPre=/bin/mkdir -p /media
 ExecStart=/usr/lib/udisks/udisks-daemon --no-debug
